--- a/project1.lpi
+++ b/project1.lpi
@@ -1,83 +1,184 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<CONFIG>
-  <ProjectOptions>
-    <Version Value="11"/>
-    <PathDelim Value="\"/>
-    <General>
-      <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
-      <Title Value="project1"/>
-      <ResourceType Value="res"/>
-      <UseXPManifest Value="True"/>
-      <Icon Value="0"/>
-    </General>
-    <i18n>
-      <EnableI18N LFM="False"/>
-    </i18n>
-    <BuildModes Count="1">
-      <Item1 Name="Default" Default="True"/>
-    </BuildModes>
-    <PublishOptions>
-      <Version Value="2"/>
-    </PublishOptions>
-    <RunParams>
-      <FormatVersion Value="2"/>
-      <Modes Count="1">
-        <Mode0 Name="default"/>
-      </Modes>
-    </RunParams>
-    <RequiredPackages Count="1">
-      <Item1>
-        <PackageName Value="LCL"/>
-      </Item1>
-    </RequiredPackages>
-    <Units Count="2">
-      <Unit0>
-        <Filename Value="project1.lpr"/>
-        <IsPartOfProject Value="True"/>
-      </Unit0>
-      <Unit1>
-        <Filename Value="unit1.pas"/>
-        <IsPartOfProject Value="True"/>
-        <ComponentName Value="Form1"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Form"/>
-        <UnitName Value="Unit1"/>
-      </Unit1>
-    </Units>
-  </ProjectOptions>
-  <CompilerOptions>
-    <Version Value="11"/>
-    <PathDelim Value="\"/>
-    <Target>
-      <Filename Value="project1"/>
-    </Target>
-    <SearchPaths>
-      <IncludeFiles Value="$(ProjOutDir)"/>
-      <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-    </SearchPaths>
-    <Linking>
-      <Debugging>
-        <DebugInfoType Value="dsDwarf3"/>
-      </Debugging>
-      <Options>
-        <Win32>
-          <GraphicApplication Value="True"/>
-        </Win32>
-      </Options>
-    </Linking>
-  </CompilerOptions>
-  <Debugging>
-    <Exceptions Count="3">
-      <Item1>
-        <Name Value="EAbort"/>
-      </Item1>
-      <Item2>
-        <Name Value="ECodetoolError"/>
-      </Item2>
-      <Item3>
-        <Name Value="EFOpenError"/>
-      </Item3>
-    </Exceptions>
-  </Debugging>
-</CONFIG>
+unit Unit1;
+
+{$mode objfpc}{$H+}
+
+interface
+
+uses
+  Classes, SysUtils, FileUtil, Forms, Controls, Graphics, Dialogs, ExtCtrls,
+  StdCtrls, Colaarreglos, Pilasarreglos, Tipos;
+
+type
+
+  { TForm1 }
+  cajas= array [1..5] of cola;
+
+  TForm1 = class(TForm)
+    Button1: TButton;
+    EditPlata: TEdit;
+    Label2: TLabel;
+    Limpiar: TButton;
+    Label1: TLabel;
+    ListBox1: TListBox;
+    Mostrar: TButton;
+    entrada: TEdit;
+    Ubicar: TButton;
+
+    procedure Button1Click(Sender: TObject);
+    procedure FormCreate(Sender: TObject);
+    procedure LimpiarClick(Sender: TObject);
+    procedure MostrarClick(Sender: TObject);
+    procedure UbicarClick(Sender: TObject);
+
+  private
+    { private declarations }
+  public
+    { public declarations }
+
+  end;
+
+var
+  Form1: TForm1;
+  Caj: cajas;
+  ColBancos: cola;
+  pil:pila;
+
+
+implementation
+
+{$R *.lfm}
+
+{ TForm1 }
+
+procedure cargar(var col:cola);
+var
+  x,y:tipoelemento;
+  bandera:boolean;
+  colaux:cola;
+begin
+  x.DS:= form1.entrada.Text;
+  x.DN:= strtoint(form1.EditPlata.Text);
+  col.Encolar(x);
+  colaux.Crearvacia;
+end;
+
+function gcd(a, b: integer): integer;
+begin
+  if b = 0 then
+    result := a
+  else
+    result := gcd(b, a mod b);
+end;
+
+procedure divisores(var col:cola);
+var
+  x, y: tipoelemento;
+  s: string;
+  divisor: integer;
+begin
+  while not col.Esvacia() do
+  begin
+    col.Recuperarfrente(x);
+    col.Desencolar();
+
+    divisor := x.DN; // Inicializar el divisor con el primer elemento de la cola
+    y := x; // Asignar el primer elemento de la cola a 'y'
+
+    while not col.Esvacia() and (y.DS = x.DS) do
+    begin
+      col.Recuperarfrente(y);
+      col.Desencolar();
+
+      divisor := gcd(divisor, y.DN); // Calcular el MCD entre el divisor actual y el nuevo elemento
+    end;
+
+    if divisor = x.DN then // Si el divisor sigue siendo igual al primer elemento de la cola
+    begin
+      form1.ListBox1.Items.Add('Banco: ' + x.DS + ' --- No tiene divisor');
+    end
+    else
+    begin
+      form1.ListBox1.Items.Add('Banco: ' + x.DS + ' --- Divisor: ' + inttostr(divisor));
+    end;
+      end;
+end;
+
+ { if col.Esvacia() then
+    col.Encolar(x)
+  else
+  begin
+    while not col.Esvacia() do
+    begin
+      col.Recuperarfrente(y);
+      col.Desencolar();
+      if y.DS = x.DS then
+      begin
+        y.DN:= y.DN + x.DN;
+        bandera:=true;
+        colaux.Encolar(y);
+      end
+      else
+      begin
+        colaux.Encolar(y);
+      end;
+    end;
+
+    while not colaux.Esvacia() do
+    begin
+      colaux.Recuperarfrente(y);
+      colaux.Desencolar();
+      col.Encolar(y);
+    end;
+
+    if not bandera then
+      col.Encolar(x);
+  end;    }
+
+
+procedure mosmul(col:cola);
+var
+  x:tipoelemento;
+  s:string;
+begin
+  form1.ListBox1.Clear;
+  while not col.Esvacia() do
+        begin
+             col.Recuperarfrente(x);
+             col.Desencolar();
+             form1.ListBox1.Items.Add('Banco: ' + x.DS + ' --- Monto: ' +inttostr(x.DN));
+        end;
+end;
+
+
+procedure TForm1.FormCreate(Sender: TObject);
+begin
+  ColBancos.Crearvacia;
+  pil.Crearvacia;
+end;
+
+procedure TForm1.Button1Click(Sender: TObject);
+begin
+  divisores(ColBancos);
+end;
+
+
+
+procedure TForm1.LimpiarClick(Sender: TObject);
+begin
+  form1.ListBox1.Clear;
+end;
+
+
+procedure TForm1.MostrarClick(Sender: TObject);
+begin
+  mosmul(ColBancos);
+end;
+
+procedure TForm1.UbicarClick(Sender: TObject);
+begin
+  cargar(ColBancos);
+end;
+
+
+
+end.
